update depth visual

--- a/index.html
+++ b/index.html
@@ -216,17 +216,17 @@
 		<!-- input near distacne and far distance -->
 		<div>
 			<label for="near">Near:</label>
-			<input type="number" id="near" value="0.1">
+			<input type="number" id="near" value="0.4">
 		</div>
 		<div>
 			<label for="far">Far:</label>
-			<input type="number" id="far" value="2.0">
+			<input type="number" id="far" value="10.0">
 		</div>
 
 		<!-- if render mode is depth show -->
 		<!-- if render mode is depth, show the depth bar -->
-		<div id="depthBarLegend" style="width: 20px; height: 200px; background: linear-gradient(to top,
-			darkblue, Cyan, Green, Yellow, Red); border: 1px solid #000; display: none;">
+		<div id="depthBarLegend" style="width: 20px; height: 400px; background: linear-gradient(to top,
+			Blue, Cyan, Green, Yellow, Red); border: 1px solid #000; display: none;">
 
 		</div>
 
