--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
 		<select id="RenderMode">
 			<option value="rgb">Render Color</option>
 			<option value="depth">Render Depth</option>
+			<option value="gaussian">Render Gaussian</option>
 			<option value="normal">Render Normal</option>
 		</select>
 		Gaussian Size:
