update gaussian view

--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
 			<option value="rgb">Render Color</option>
 			<option value="depth">Render Depth</option>
 			<option value="gaussian">Render Gaussian</option>
+			<option value="gaussianSH">Render GaussianSH</option>
 			<option value="normal">Render Normal</option>
 		</select>
 		Gaussian Size:
