update multi gaussian compare

--- a/index.html
+++ b/index.html
@@ -203,6 +203,13 @@
 		<h3 class="nohf">WebGL 3D Gaussian Splat Viewer</h3>
 		<!-- <button id="RenderDepth">Render Depth</button>
 			<button id="RenderNormal">Render Normal</button> -->
+		<select id="switchGS">
+			<option value="GS1">GS1</option>
+			<option value="GS2">GS2</option>
+			<option value="GS3">GS3</option>
+			<option value="GS4">GS4</option>
+		</select>
+		
 		<select id="RenderMode">
 			<option value="rgb">Render Color</option>
 			<option value="depth">Render Depth</option>
